--- a/components/search/search.css
+++ b/components/search/search.css
@@ -1,46 +1,46 @@
 .span {
     box-sizing: border-box;
-    color: 'rgb(2; 8; 23)';
-    display: 'block';
-    height: 'var(--base-size-16; 1rem)';
-    left: 'var(--base-size-8; 0.5rem)';
-    pointer-events: 'none';
-    position: 'absolute';
-    top: 'var(--base-size-8; 0.5rem)';
-    width: 'var(--base-size-16; 1rem)'
+    color: rgb(2, 8, 23);
+    display: block;
+    height: var(--base-size-16, 1rem);
+    left: var(--base-size-8, 0.5rem);
+    pointer-events: none;
+    position: absolute;
+    top: var(--base-size-8, 0.5rem);
+    width: var(--base-size-16, 1rem)
 }
 
 .div {
 
-    box-sizing: 'border-box';
-    display: 'grid';
-    position: 'relative';
+    box-sizing: border-box;
+    display: grid;
+    position: relative;
 }
 
 .svg {
-    color: 'rgb(2; 8; 23)';
-    box-sizing: 'border-box';
-    overflow: 'visible';
-    fill: 'currentColor';
-    user-select: 'none';
+    color: rgb(2, 8, 23);
+    box-sizing: border-box;
+    overflow: visible;
+    fill: currentColor;
+    user-select: none;
 }
 
 .input {
-    color: 'rgb(2; 8; 23)';
-    box-sizing: 'border-box';
-    font: 'inherit';
+    color: rgb(2, 8, 23);
+    box-sizing: border-box;
+    font: inherit;
     margin: 0;
-    font-family: 'inherit';
-    background-color: 'rgb(255; 255; 255)';
-    border: 'var(--borderWidth-thin; max(1px; 0.0625rem)) solid var(--control-borderColor-rest; var(--color-border-default))';
-    border-radius: 'var(--borderRadius-medium; 0.375rem)';
-    font-size: 'var(--text-body-size-medium; 0.875rem)';
-    line-height: 'var(--text-body-lineHeight-medium; 1.4285)';
-    padding-block: 'calc(var(--control-medium-paddingBlock; 6px) - var(--borderWidth-thin; 1px))';
-    padding-inline: 'var(--control-medium-paddingInline-condensed; 0.5rem)';
-    transition: '80ms cubic-bezier(0.33; 1; 0.68; 1)';
-    transition-property: 'color; background-color; box-shadow; border-color';
-    padding-inline-start: 'calc(var(--control-medium-paddingInline-condensed; 0.5rem) + var(--base-size-16; 1rem) + var(--control-medium-gap; 0.5rem))'
+    font-family: inherit;
+    background-color: rgb(255, 255, 255);
+    border: var(--borderWidth-thin, max(1px, 0.0625rem)) solid var(--control-borderColor-rest, var(--color-border-default));
+    border-radius: var(--borderRadius-medium, 0.375rem);
+    font-size: var(--text-body-size-medium, 0.875rem);
+    line-height: var(--text-body-lineHeight-medium, 1.4285);
+    padding-block: calc(var(--control-medium-paddingBlock, 6px) - var(--borderWidth-thin, 1px));
+    padding-inline: var(--control-medium-paddingInline-condensed, 0.5rem);
+    transition: 80ms cubic-bezier(0.33, 1, 0.68, 1);
+    transition-property: color;
+    padding-inline-start: calc(var(--control-medium-paddingInline-condensed, 0.5rem) + var(--base-size-16, 1rem) + var(--control-medium-gap, 0.5rem))
 }
 
 
